--- a/ui/package.json
+++ b/ui/package.json
@@ -9,9 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.37"
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "luxon": "^3.5.0",
+    "vue": "^3.4.37",
+    "vue-i18n": "^10.0.3",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "@vitejs/plugin-vue": "^5.1.2",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
